--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     }
   ],
   "require" : {
-    "php": "^7.0",
-    "guzzlehttp/guzzle": "^6.3"
+    "php": "^7.2",
+    "guzzlehttp/guzzle": "^6.3|^7.0.1"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
